[package]
name = "celery_exporter"
version = "1.5.2"
authors = ["Fabio Todaro <fbregist@gmail.com>", "Nicola Martino <mroci@bruttocarattere.org>"]
description = "Prometheus metrics exporter for Celery"
edition = "2018"
homepage = "https://github.com/OvalMoney/celery-exporter"
readme = "README.md"
repository = "https://github.com/OvalMoney/celery-exporter.git"

[lib]
name = "celery_exporter"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.12.4"
features = ["extension-module"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lru = "0.6.5"
