[package]
name = "celery_exporter"
version = "2.0.0"
authors = ["Fabio Todaro <fbregist@gmail.com>", "Nicola Martino <mroci@bruttocarattere.org>", "Andrew O'Brien <aobrien@redlattice.com>"]
description = "Prometheus metrics exporter for Celery"
edition = "2018"
homepage = "https://github.com/REDLattice/celery-exporter"
readme = "README.md"
repository = "https://github.com/REDLattice/celery-exporter.git"

[lib]
name = "celery_exporter"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.12.4"
features = ["extension-module"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lru = "0.6.5"

[package.metadata.maturin]
classifier = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent"
]
requires-dist = ["click>=7", "celery>=4,<5", "prometheus_client>=0.0.20", "redis>=3.2.0; extra == 'redis'"]
provides-extra = ["redis"]

[package.metadata.maturin.scripts]
celery-exporter = "celery_exporter.__main__:main"
