[project]
name = "celery_exporter"
version = "2.0.0"
license = {text = "MIT License"}

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent"
]
dependencies = ["celery>=4,<5", "prometheus_client>=0.0.20", "redis>=3.2.0; extra == 'redis'"]

# [project.optional-dependencies]
# redis = ["*"]

[project.scripts]
celery-exporter = "celery_exporter.__main__:main"

[build-system]
requires = ["maturin"]
build-backend = "maturin"
